--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "kartenviewers",
         "redlining",
         "shapefile",
-        "shapefiles"
+        "shapefiles",
+        "vertex"
     ]
 }
