--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "cSpell.language": ",de",
+    "cSpell.language": "de,de-DE",
     "cSpell.words": [
         "bounding",
         "kartenviewer",
